[gd_scene load_steps=16 format=3 uid="uid://main_game"]

[ext_resource type="Script" path="res://scripts/game/main_game.gd" id="1"]
[ext_resource type="Script" path="res://scripts/game/map_renderer.gd" id="2"]
[ext_resource type="Script" path="res://scripts/game/unit_renderer.gd" id="3"]
[ext_resource type="Script" path="res://scripts/game/game_camera.gd" id="4"]
[ext_resource type="Script" path="res://scripts/game/game_hud.gd" id="5"]
[ext_resource type="Script" path="res://scripts/game/overlay_renderer.gd" id="6"]
[ext_resource type="Script" path="res://scripts/game/move_animator.gd" id="7"]
[ext_resource type="Script" path="res://scripts/game/combat_effects.gd" id="8"]
[ext_resource type="Script" path="res://scripts/ui/build_panel.gd" id="9"]
[ext_resource type="Script" path="res://scripts/ui/production_panel.gd" id="10"]
[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="11"]
[ext_resource type="Script" path="res://scripts/ui/game_over_screen.gd" id="12"]
[ext_resource type="Script" path="res://scripts/ui/settings_panel.gd" id="13"]
[ext_resource type="Script" path="res://scripts/game/fog_renderer.gd" id="14"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1")

[node name="MapRenderer" type="Node2D" parent="."]
script = ExtResource("2")

[node name="OverlayRenderer" type="Node2D" parent="."]
script = ExtResource("6")

[node name="FogRenderer" type="Node2D" parent="."]
script = ExtResource("14")

[node name="MoveAnimator" type="Node" parent="."]
script = ExtResource("7")

[node name="UnitRenderer" type="Node2D" parent="."]
script = ExtResource("3")

[node name="CombatEffects" type="Node2D" parent="."]
script = ExtResource("8")

[node name="GameEngine" type="GameEngine" parent="."]

[node name="GameCamera" type="Camera2D" parent="."]
script = ExtResource("4")

[node name="GameHUD" type="CanvasLayer" parent="."]
script = ExtResource("5")

[node name="TopBar" type="HBoxContainer" parent="GameHUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 36.0
grow_horizontal = 2

[node name="TopBarBG" type="ColorRect" parent="GameHUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.04, 0.06, 0.10, 0.85)
mouse_filter = 2

[node name="TurnLabel" type="Label" parent="GameHUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 13
text = "Turn: 0"
horizontal_alignment = 0
vertical_alignment = 1

[node name="PlayerLabel" type="Label" parent="GameHUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
theme_override_font_sizes/font_size = 13
text = "Player 1  |  Units: 3  |  Buildings: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="GameHUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 13
text = "ACTIVE"
horizontal_alignment = 2
vertical_alignment = 1
modulate = Color(0.3, 0.9, 0.4, 1)

[node name="ResourceBar" type="HBoxContainer" parent="GameHUD"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 36.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 4

[node name="ResourceBarBG" type="ColorRect" parent="GameHUD/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.03, 0.05, 0.08, 0.80)
mouse_filter = 2

[node name="MetalLabel" type="Label" parent="GameHUD/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Metal: 0/0 (+0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OilLabel" type="Label" parent="GameHUD/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Oil: 0/0 (+0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="GameHUD/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Gold: 0/0 (+0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyLabel" type="Label" parent="GameHUD/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Energy: 0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsLabel" type="Label" parent="GameHUD/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Credits: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnitPanel" type="PanelContainer" parent="GameHUD"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -200.0
offset_right = 370.0
offset_bottom = -10.0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="GameHUD/UnitPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="IconRow" type="HBoxContainer" parent="GameHUD/UnitPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UnitIcon" type="TextureRect" parent="GameHUD/UnitPanel/VBox/IconRow"]
layout_mode = 2
custom_minimum_size = Vector2(56, 56)
stretch_mode = 5
expand_mode = 3

[node name="UnitNameVBox" type="VBoxContainer" parent="GameHUD/UnitPanel/VBox/IconRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="UnitName" type="Label" parent="GameHUD/UnitPanel/VBox/IconRow/UnitNameVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Tank"
horizontal_alignment = 0

[node name="UnitIDLabel" type="Label" parent="GameHUD/UnitPanel/VBox/IconRow/UnitNameVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.45, 0.50, 0.60, 1)
text = "ID: 1"

[node name="Sep" type="HSeparator" parent="GameHUD/UnitPanel/VBox"]
layout_mode = 2

[node name="UnitStats" type="Label" parent="GameHUD/UnitPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "HP: 24/24  Armor: 8  Speed: 12/12"

[node name="UnitCombat" type="Label" parent="GameHUD/UnitPanel/VBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Dmg: 12  Range: 5  Shots: 1/1  Ammo: 6/6"

[node name="UnitPos" type="Label" parent="GameHUD/UnitPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.45, 0.50, 0.60, 1)
text = "(10, 32)"

[node name="UnitExtra" type="Label" parent="GameHUD/UnitPanel/VBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = ""
autowrap_mode = 2

[node name="BuildButton" type="Button" parent="GameHUD/UnitPanel/VBox"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(120, 32)
text = "BUILD"

[node name="BottomBar" type="HBoxContainer" parent="GameHUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 380.0
offset_top = -44.0
offset_right = -200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="BottomBarBG" type="ColorRect" parent="GameHUD/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.04, 0.06, 0.10, 0.75)
mouse_filter = 2

[node name="TileLabel" type="Label" parent="GameHUD/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "(0, 0)"
horizontal_alignment = 0
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="GameHUD/BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(160, 36)
theme_override_font_sizes/font_size = 16
text = "END TURN"

[node name="MinimapContainer" type="Control" parent="GameHUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -194.0
offset_top = -194.0
grow_horizontal = 0
grow_vertical = 0

[node name="BuildPanel" type="PanelContainer" parent="GameHUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 70.0
offset_right = -10.0
offset_bottom = 400.0
grow_horizontal = 0
script = ExtResource("9")

[node name="VBox" type="VBoxContainer" parent="GameHUD/BuildPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="GameHUD/BuildPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Build"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="GameHUD/BuildPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)

[node name="BuildingList" type="VBoxContainer" parent="GameHUD/BuildPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="GameHUD/BuildPanel/VBox"]
layout_mode = 2
text = "Close"

[node name="ProductionPanel" type="PanelContainer" parent="GameHUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -340.0
offset_top = -380.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("10")

[node name="VBox" type="VBoxContainer" parent="GameHUD/ProductionPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="GameHUD/ProductionPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Production"
horizontal_alignment = 1

[node name="QueueScroll" type="ScrollContainer" parent="GameHUD/ProductionPanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="QueueList" type="VBoxContainer" parent="GameHUD/ProductionPanel/VBox/QueueScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="GameHUD/ProductionPanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 18)

[node name="ProgressLabel" type="Label" parent="GameHUD/ProductionPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Queue empty"
horizontal_alignment = 1

[node name="Controls" type="HBoxContainer" parent="GameHUD/ProductionPanel/VBox"]
layout_mode = 2

[node name="AddButton" type="Button" parent="GameHUD/ProductionPanel/VBox/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Unit"

[node name="SpeedButton" type="Button" parent="GameHUD/ProductionPanel/VBox/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed: 1x"

[node name="RepeatButton" type="Button" parent="GameHUD/ProductionPanel/VBox/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Repeat: OFF"

[node name="AddUnitScroll" type="ScrollContainer" parent="GameHUD/ProductionPanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)

[node name="AddUnitList" type="VBoxContainer" parent="GameHUD/ProductionPanel/VBox/AddUnitScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartStopButton" type="Button" parent="GameHUD/ProductionPanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
text = "START"

[node name="CloseButton" type="Button" parent="GameHUD/ProductionPanel/VBox"]
layout_mode = 2
text = "Close"

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false
layer = 100
script = ExtResource("11")

[node name="Dimmer" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65)

[node name="Panel" type="PanelContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -150.0
offset_right = 160.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Title" type="Label" parent="PauseMenu/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PAUSED"
horizontal_alignment = 1

[node name="Sep" type="HSeparator" parent="PauseMenu/Panel/VBox"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 42)
theme_override_font_sizes/font_size = 18
text = "Resume"

[node name="SettingsButton" type="Button" parent="PauseMenu/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 42)
theme_override_font_sizes/font_size = 18
text = "Settings"

[node name="QuitButton" type="Button" parent="PauseMenu/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 42)
theme_override_font_sizes/font_size = 18
text = "Quit to Menu"

[node name="SettingsOverlay" type="PanelContainer" parent="PauseMenu"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13")

[node name="VBox" type="VBoxContainer" parent="PauseMenu/SettingsOverlay"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="PauseMenu/SettingsOverlay/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="Sep1" type="HSeparator" parent="PauseMenu/SettingsOverlay/VBox"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckBox" parent="PauseMenu/SettingsOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="VsyncCheck" type="CheckBox" parent="PauseMenu/SettingsOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "VSync"

[node name="EdgeScrollCheck" type="CheckBox" parent="PauseMenu/SettingsOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Camera Edge Scroll"

[node name="MasterVolLabel" type="Label" parent="PauseMenu/SettingsOverlay/VBox"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="PauseMenu/SettingsOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 24)
max_value = 100.0
value = 80.0

[node name="MusicVolLabel" type="Label" parent="PauseMenu/SettingsOverlay/VBox"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="PauseMenu/SettingsOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 24)
max_value = 100.0
value = 60.0

[node name="SfxVolLabel" type="Label" parent="PauseMenu/SettingsOverlay/VBox"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxVolSlider" type="HSlider" parent="PauseMenu/SettingsOverlay/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 24)
max_value = 100.0
value = 80.0

[node name="CloseButton" type="Button" parent="PauseMenu/SettingsOverlay/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Close"

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false
layer = 90
script = ExtResource("12")

[node name="Dimmer" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.75)

[node name="Panel" type="PanelContainer" parent="GameOverScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -130.0
offset_right = 220.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="GameOverScreen/Panel"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="ResultLabel" type="Label" parent="GameOverScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "VICTORY!"
horizontal_alignment = 1

[node name="DetailsLabel" type="Label" parent="GameOverScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Player 1 has won the game!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="GameOverScreen/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 38)
text = "Continue Playing"

[node name="MenuButton" type="Button" parent="GameOverScreen/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 38)
text = "Return to Menu"
